--- a/future-vcf.html
+++ b/future-vcf.html
@@ -59,7 +59,7 @@
             Its lossless encoding is based on the expectation of identical QC values at nearby sites
             for a given sample.  With the parameter --squeeze, the format is lossy. In this
             mode, it suppresses fields other than genotype GT and read depth DP from cells with
-            zero alternate reference reads in AD, also DP is rounded down to a power of two in these cells.
+            zero alternate reference reads in AD. DP is rounded down to a power of two in these cells.
         </div>
       </section>
 
